<resources>
    <string name="app_name">新媒之家</string>
    <string name="empty_net_error">暂时没有网络,请稍后重试</string>
    <string name="empty_no_data">暂无数据</string>
    <string name="title_activity_found_password">FoundPasswordActivity</string>
    <string name="token_overdue">你已超过10天没登录，请重新登陆</string>
    <string name="type_position">选择分类</string>
    <string name="login">登录你的账号才能进行操作</string>
    <string name="dialog_out">编辑内容没有保存，确认退出？</string>
    <string name="dialog_title">编辑的内容没有发布，是否保存草稿？</string>
    <string name="dialog_issue_out">退出此次编辑？</string>
    <string name="create_liveroom_out">您还没有课堂  请先创建课堂？</string>
    <string name="comment_max_lenght">抱歉，评论最多只能400字哦！</string>
    <string name="comment_note">这里显示的是你加入的圈子和关注的人的动态，如需屏蔽某某个圈子的动态，可以在圈子设置里面关闭</string>
    <string name="comment_disagree">不同意</string>
    <string name="comment_agree">同意</string>
    <string name="comment_upload_image_failed">上传图片失败</string>
    <string name="rc_plugin_camera">拍照</string>
    <string name="copy_url">复制链接</string>
    <string name="collect">收藏</string>
    <string name="collect_cancel">取消收藏</string>
    <string name="refresh">刷新</string>
    <string name="share_in_dynamic">圈子动态</string>
    <string name="share_in_friends">分享好友</string>
    <string name="share_icon_erweima">二维码</string>
    <string name="complaint">投诉</string>
    <string name="delete">删除</string>
    <string name="title_channels_select">频道选择</string>
    <string name="title_share_make_money">分销赚钱</string>
    <string name="title_phone_register">手机号注册</string>
    <string name="title_login">登录</string>
    <string name="title_account">公众号信息</string>
    <string name="title_edit_info">编辑资料</string>
    <string name="title_vertifive_info">实名认证</string>
    <string name="title_forget_psw">忘记密码</string>
    <string name="title_edit_nikename">编辑名称</string>
    <string name="title_bind_card">银行卡绑定</string>
    <string name="title_epay_card">支付宝绑定</string>
    <string name="title_edit_introduction">编辑简介</string>
    <string name="title_take_setting">接单设置</string>
    <string name="title_dispatch_order">文案派单</string>
    <string name="title_personal_setting">应用设置</string>
    <string name="title_message_setting">消息设置</string>
    <string name="title_privacy_setting">隐私设置</string>
    <string name="title_account_safe">账号与安全</string>
    <string name="title_black_list">黑名单</string>
    <string name="title_personal_deal">交易</string>
    <string name="title_personal_classroom">课堂</string>
    <string name="title_personal_mymessage">我的消息</string>
    <string name="title_personal_history">观看历史</string>
    <string name="title_reported_course">已报课程</string>
    <string name="title_class_distribution">课程分销</string>
    <string name="title_circle_distribution">圈子分销</string>
    <string name="title_class_profit">课程收益</string>
    <string name="title_circle_profit">圈子收益</string>
    <string name="title_personal_focus">我的好友</string>
    <string name="title_personal_fans">我的粉丝</string>
    <string name="title_personal_recommed">我的关注</string>
    <string name="title_personal_direct_seeding_title">课堂后台</string>
    <string name="title_create_series">新建系列课</string>
    <string name="title_modify_series">修改系列课</string>
    <string name="title_create_topic">新建课程</string>
    <string name="title_create_series_intro">系列课介绍</string>
    <string name="title_create_series_classify">选择系列课分类</string>
    <string name="title_updata_wenan">修改设置</string>
    <string name="title_add_budget">增加预算</string>
    <string name="title_publish_extend">发布推广</string>
    <string name="title_updata_article">修改文案</string>
    <string name="title_select_article">选择历史方案</string>
    <string name="title_profit">接单盈利</string>
    <string name="title_live_bg_setting">课堂管理</string>
    <string name="title_user_manager">用户管理</string>
    <string name="title_banned_user">课堂禁言用户管理</string>
    <string name="title_black_user">课堂黑名单用户管理</string>
    <string name="title_apply_for">申请列表</string>
    <string name="title_freeze_account">未结算订单</string>
    <string name="title_live_bg_intro">课堂简介</string>
    <string name="title_add_public_qrcode">添加公众号二维码</string>
    <string name="title_live_manager">课堂管理员</string>
    <string name="title_invited_guests">邀请嘉宾</string>
    <string name="title_change_live_bg">修改课堂背景</string>
    <string name="title_rmb_details">人民币账单详情</string>
    <string name="title_wjs_details">未结算订单详情</string>
    <string name="title_circle_manager">圈子管理</string>
    <string name="title_usable">可用余额</string>
    <string name="title_login_wx">登录公众号</string>
    <string name="title_goods_detailed">帖子详情</string>
    <string name="title_classify_management">分类管理</string>
    <string name="title_participation">我参与的</string>
    <string name="title_mine_article">我的文章</string>
    <string name="title_fast_deal">快速交易</string>
    <string name="title_video">视频</string>
    <string name="title_order_detailed">订单详情</string>
    <string name="title_order_list">交易订单</string>
    <string name="title_issue_deal">发布交易</string>
    <string name="title_issue_list">我的帖子</string>
    <string name="title_fast_list">快速交易</string>
    <string name="title_huishou_list">回收站</string>
    <string name="title_feed_back">意见反馈</string>
    <string name="title_report">举报</string>
    <string name="title_classroom">课堂</string>
    <string name="title_select_address">选择地址</string>
    <string name="title_add_address">新建地址</string>
    <string name="title_updata_address">修改地址</string>
    <string name="title_updata_deal">修改交易</string>
    <string name="title_more_news">更多文章</string>
    <string name="title_more_topic">更多课堂</string>
    <string name="title_more_deal">更多交易</string>
    <string name="title_normal_setting">课堂设置</string>
    <string name="title_share_notice">分享榜</string>
    <string name="title_share_card">分享课堂</string>
    <string name="title_pay">支付订单</string>
    <string name="title_member_manage">参课成员</string>
    <string name="title_account_water">账单流水</string>
    <string name="title_account_water_details">账单明细</string>
    <string name="title_circle_home">圈子</string>
    <string name="titile_class_menber_list">课堂成员列表</string>
    <string name="title_order_record">订单列表</string>
    <string name="title_create_circle_property">选择圈子属性</string>
    <string name="title_circle_info">圈子资料</string>
    <string name="title_create_free_circle">创建免费圈子</string>
    <string name="title_create_nofree_circle">创建付费圈子</string>
    <string name="title_circle_edit">编辑圈子资料</string>
    <string name="title_circle_intro">圈子简介</string>
    <string name="title_circle_find">加入圈子</string>
    <string name="title_circle_detailed">编辑详情页</string>
    <string name="title_mine_circle">我的圈子</string>
    <string name="title_his_circle">Ta的圈子</string>
    <string name="title_circle_invite">邀请</string>
    <string name="title_circle_manage">圈子管理</string>
    <string name="title_circle_notice_issue">发布公告</string>
    <string name="title_issue_dynamic">发表动态</string>
    <string name="title_topic_manager">动态管理</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_join_us">加入我们</string>
    <string name="title_details">详情</string>
    <string name="title_browser_record">浏览记录</string>
    <string name="title_dymnic">动态</string>
    <string name="title_deal_management">交易管理</string>
    <string name="title_sync">同步圈子</string>
    <string name="title_visitor">访客</string>
    <string name="title_check_circle_info">查看圈子资料</string>
    <string name="title_circle_setting">圈子设置</string>
    <string name="titlle_income_detail">收益明细</string>
    <string name="title_reward">打赏</string>
    <string name="title_deal">交易</string>
    <string name="title_member">成员加入方式</string>
    <string name="title_detail_info">详细资料</string>
    <string name="title_remark_info">备注信息</string>
    <string name="title_mine_dynamic">我的动态</string>
    <string name="title_circle_erweicode">二维码名片</string>
    <string name="title_essence_list">精华列表</string>
    <string name="title_group_rule">群规</string>
    <string name="title_article_manager">文章管理</string>
    <string name="title_notice_message">系统将在一个工作日内审核</string>
    <string name="title_apply_guarantee">发起担保</string>
    <string name="title_guarantee_detailed">交易页面</string>
    <string name="title_class_order">课程订单</string>
    <string name="title_my_speciai_list">我订阅的专题</string>
    <string name="title_special_detail">专题详情</string>
    <string name="mine_direct_seeding">课堂</string>
    <string name="mine_circle">圈子</string>
    <string name="mine_news">资讯</string>
    <string name="mine_transaction">交易</string>
    <string name="mine_purchase_record">购买记录</string>
    <string name="mine_sell_record">出售记录</string>
    <string name="mine_secured_transaction">担保交易</string>
    <string name="mine_personal_homepage">个人主页</string>
    <string name="mine_article_editor">文章编辑</string>
    <string name="mine_application_author">申请作者</string>
    <string name="mine_application_lecturer">申请讲师</string>
    <string name="mine_manage_class">课程管理</string>
    <string name="mine_course_list">课程列表</string>
    <string name="mine_attention_list">关注列表</string>
    <string name="mine_history_record">历史记录</string>
    <string name="issue_deal_faild">您提交的帖子未通过审核，请修改好在重新发布。\n未通过原因：</string>
    <string name="modify_success">修改成功</string>
    <string name="label_save">保存</string>
    <string name="label_cancel">取消</string>
    <string name="label_exit">退出</string>
    <string name="label_confirm">确定</string>
    <string name="label_edit">编辑</string>
    <string name="label_del">删除</string>
    <string name="label_complete">完成</string>
    <string name="tusi_nikename_canot_empty">昵称不能为空</string>
    <string name="card_number_canot_empty">银行卡号不能为空</string>
    <string name="card_username_canot_empty">用户名不能为空</string>
    <string name="epay_number_canot_empty">支付宝账号不能为空</string>
    <string name="input_hint_nikename">请输入名称</string>
    <string name="label_change_avatar">更换头像</string>
    <string name="label_not_install_QQ">未安装QQ</string>
    <string name="label_not_install_WeiXin">未安装微信</string>
    <string name="label_not_install_Sina">未安装新浪微博</string>
    <string name="mine_article_sny_failed">只能同步审核通过的文章</string>
    <string name="mine_article_reedit">重新编辑</string>
    <string name="txt_feed_back">欢迎你反馈使用产品的感受和建议</string>
    <string name="txt_submit">提交</string>
    <string name="label_introduct">主人很懒，什么也没留下~</string>
    <string name="txt_permission">此应用需要读取相机和文件夹权限</string>
    <string name="txt_card_permission">此应用需要读写文件夹权限</string>
    <string name="txt_call_phone_permission">此应用需要拨打电话权限</string>
    <string name="label_clear_all">清空</string>
    <string name="label_distriibution_list">收益明细</string>
    <string name="editor_article">正文编辑</string>
    <string name="editor_resolve">新增本地素材编辑文章</string>
    <string name="editor_type">选择分类</string>
    <string name="editor_connect_error">导入文章失败</string>
    <string name="tab_paidan">派单推广</string>
    <string name="tab_jiedanyingli">接单盈利</string>
    <string name="tab_wenzhangguanli">文章管理</string>
    <string name="tab_gongzhonghao">公众号信息</string>
    <string name="guarantee_maimai">选择买卖关系</string>
    <string name="guarantee_user_buyer">我是买家</string>
    <string name="guarantee_user_sell">我是卖家</string>
    <string name="guarantee_number">对方新媒号</string>
    <string name="guarantee_title">交易标题</string>
    <string name="guarantee_info">交易信息</string>
    <string name="guarantee_price">交易金额</string>
    <string name="guarantee_phone">我的手机号</string>
    <string name="guarantee_danbao_price">担保费</string>
    <string name="guarantee_danbao_sell">卖方承担</string>
    <string name="guarantee_danbao_buyer">买方承担</string>
    <string name="guarantee_danbao_mid">双方平摊</string>
    <string name="guarantee_choose_friends">选择好友</string>
    <string name="circle_join_ver_now">马上去实名认证</string>
    <string name="circle_join_no_ver">未认证用户最多只能加入6个免费圈子，认证用户可以加入12个免费圈子，收费圈子不限制。</string>
    <string name="models_updata_hint">提示</string>
</resources>