<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="true"
    android:background="@drawable/shap_login_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/margin_middle"
            android:paddingBottom="@dimen/margin_middle"
            android:gravity="center_horizontal"
            android:background="@drawable/shape_circle_join_hint"
            android:textSize="@dimen/textSize_m"
            android:text="@string/models_updata_hint"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/margin_small"
            android:src="@drawable/icon_cha"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/text_color_333"
        android:textSize="@dimen/textSize_ms"
        android:text="@string/circle_join_no_ver"/>


    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_larger"
        android:layout_marginEnd="@dimen/margin_larger"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_below="@id/et_password"
        android:background="@drawable/select_btn_login_bg"
        android:text="@string/circle_join_ver_now"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/textSize_l" />

</LinearLayout>